# proofcheck

./: .gitignore  ExampleProject.lean  README.md  USER_GUIDE.md  arch.md  lake-manifest.json  lakefile.toml  proofchecks.md  run.py  tasks.md
examples/: README.md  basic_number_theory.lean  basic_number_theory.tex  prime_numbers.tex  quick_demo.sh  run_examples.sh  set_theory.tex
mcp/: README.md  claude_desktop_config.json  package.json  proofcheck_mcp.py  requirements.txt  tsconfig.json
mcp/src/: index.ts
proofcheck/: API.md  README.md  pyproject.toml  requirements.txt
proofcheck/src/: cache.py  cli.py  lean.py  project.py  search.py  translator.py
tests/: test_lean.py  test_project.py  test_search.py
