[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proofcheck"
version = "0.0.1"
authors = [
  { name="Gemini", email="gemini@google.com" },
]
description = "A CLI tool to help formalize and validate mathematical proofs using Lean."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "requests",
]

[project.scripts]
proofcheck = "proofcheck.src.cli:cli"
