[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proofcheck"
version = "0.1.0"
authors = [
  { name="Keith Ballinger", email="keith@example.com" },
]
description = "A CLI tool to help formalize and validate mathematical proofs using Lean."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "requests>=2.25",
    "rich>=10.0",
]

[project.scripts]
proofcheck = "src.cli:cli"

[tool.setuptools]
packages = ["src"]
package-dir = {"src" = "src"}
